[gd_scene load_steps=16 format=3 uid="uid://blhxcyopw51fc"]

[ext_resource type="Texture2D" uid="uid://jo6wkeaijuyh" path="res://Assets/Art/Casette/casette_button.png" id="1_h5op2"]
[ext_resource type="Script" path="res://Scripts/casette_player.gd" id="1_ucm2n"]
[ext_resource type="Texture2D" uid="uid://c32bhcxjcu5xt" path="res://Assets/Art/Casette/casette_body.png" id="2_st30h"]
[ext_resource type="Texture2D" uid="uid://benfnxc6kllby" path="res://Assets/Art/Casette/wheel_1.png" id="3_xqp36"]
[ext_resource type="Texture2D" uid="uid://cbh561tytgt2a" path="res://Assets/Art/Casette/wheel_2.png" id="4_dmq11"]
[ext_resource type="PackedScene" uid="uid://ddktg6351ag7b" path="res://Prefabs/draggable.tscn" id="6_v6vv6"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_0x5f7"]
size = Vector2(146, 89)

[sub_resource type="Animation" id="Animation_txtfi"]
resource_name = "spin"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Wheel1:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, -6.28319]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Wheel2:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [0.0, -6.28319, -12.5664]
}

[sub_resource type="Animation" id="Animation_wk1kc"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Wheel1:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Wheel2:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_kvy6q"]
_data = {
"RESET": SubResource("Animation_wk1kc"),
"spin": SubResource("Animation_txtfi")
}

[sub_resource type="Animation" id="Animation_0ure2"]
resource_name = "button_click"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Button:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.3),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(-10, 0), Vector2(-6, 0)]
}

[sub_resource type="Animation" id="Animation_6uydg"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Button:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_uvuq3"]
_data = {
"RESET": SubResource("Animation_6uydg"),
"button_click": SubResource("Animation_0ure2")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_upaac"]
size = Vector2(18, 25)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ijalu"]
size = Vector2(149, 90)

[node name="CasettePlayer" type="RigidBody2D"]
mass = 3.0
script = ExtResource("1_ucm2n")

[node name="Button" type="Sprite2D" parent="."]
texture = ExtResource("1_h5op2")

[node name="Body" type="Sprite2D" parent="."]
texture = ExtResource("2_st30h")

[node name="Wheel1" type="Sprite2D" parent="."]
position = Vector2(-27, 20)
texture = ExtResource("3_xqp36")
offset = Vector2(27, -20)

[node name="Wheel2" type="Sprite2D" parent="."]
position = Vector2(21, 19)
texture = ExtResource("4_dmq11")
offset = Vector2(-21, -19)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2(-8, 21)
shape = SubResource("RectangleShape2D_0x5f7")

[node name="WheelsAnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_kvy6q")
}

[node name="ButtonAnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_uvuq3")
}

[node name="ButtonArea" type="Area2D" parent="."]
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="ButtonArea"]
visible = false
position = Vector2(76, 1)
shape = SubResource("RectangleShape2D_upaac")

[node name="DraggableArea" parent="." instance=ExtResource("6_v6vv6")]

[node name="CollisionShape2D2" type="CollisionShape2D" parent="DraggableArea"]
position = Vector2(-6.5, 21)
shape = SubResource("RectangleShape2D_ijalu")

[connection signal="body_entered" from="ButtonArea" to="." method="_on_button_area_body_entered"]
